# Alz_face_api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  app.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  repo_tree.txt  requirements.txt
src/api/: __init__.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/routers/: __init__.py  analyze.py  health.py
src/api/schemas/: __init__.py  request.py  response.py
src/api/services/: __init__.py  analyzer.py  asymmetry.py  file_handler.py  predictor.py  visualizer.py
src/core/: README.md  __init__.py  age_predictor.py  config.py  feature_extract.py  preprocess.py
