[project]
name = "alz-face-api"
version = "0.1.0"
description = ""
authors = [
    {name = "a7266165",email = "M123020018@student.nsysu.edu.tw"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
