[project]
name = "alz-face-api"
version = "0.1.0"
description = ""
authors = [
    {name = "a7266165",email = "M123020018@student.nsysu.edu.tw"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "dlib (>=20.0.0,<21.0.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "onnx (>=1.19.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "py7zr (>=1.0.0,<2.0.0)",
    "rarfile (>=4.2,<5.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "onnxruntime-gpu (>=1.23.0,<2.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "mivolo @ git+https://github.com/WildChlamydia/MiVOLO.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
